--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="global.css">
     <title>UX & UI</title>
+    <link rel="icon" type="image/png" href="src/images/Favicon.png">
 </head>
 <body>
     <header>
