--- a/about.html
+++ b/about.html
@@ -10,19 +10,20 @@
 </head>
 <body>
     <header>
-        <img class="logo" src="https://i.imgur.com/CW7VmMm.png" alt="Logo">
+        <img class="logo" src="https://i.imgur.com/CW7VmMm.png" alt="Blake W Designs Logo">
     </header>
+    <div class="icons">
+        <a href="https://www.linkedin.com/in/blakewdesigns/"><div class="social1"></div></a>
+        <a href="https://www.instagram.com/blakewdesigns/"><div class="social2" ></div></a>
+    </div>
     <div class="nav">
         <div class="links">
             <a href="index.html">UX & UI</a>
             <a href="illustration.html">Illustration</a>
             <a href="about.html">About</a>
-        </div><div class="icons">
-            <a href="https://www.linkedin.com/in/blakewdesigns/"><img class="social" src="https://i.imgur.com/RzjKtpK.png" alt="linkedin"></a>
-            <a href="https://www.instagram.com/blakewdesigns/"><img class="social" src="https://i.imgur.com/tiargvZ.png" alt="instagram"></a>
         </div>
     </div>
-    <div class="wrapper">
+    <div id="aboutwrapper">
         <div class="leftcontainer">
             <img src="src/images/Website Pic.jpg">
         </div>
@@ -30,8 +31,8 @@
             <div class="containertext">
                 <h2>Blake Walker</h2>
                 <h3>UX/UI Designer & Visual Designer</h3>
-                <p>I am a creator, world-builder, and designer living in Indianapolis. I enjoy weaving storytelling into everything that I do.I ama recent graduate of Kenzie Academy. 
-                    I am married to a wonderful woman and we have two awesome cats. We enjoy adventuring, playing PC games, and eating great food.
+                <p>I am a creator, UX designer, and visual designer living in Indianapolis. I graduated from Kenzie Academy with certificates in UX Design and User Interface Engineering. 
+                    I am married to a wonderful woman and we have two awesome cats. We enjoy adventuring, playing video games, and eating great food.
                 </p>
                 <p>I am currently available for commissions and freelance work.</p>
             </div>
