--- a/packet.html
+++ b/packet.html
@@ -12,14 +12,15 @@
     <header>
         <img class="logo" src="https://i.imgur.com/CW7VmMm.png" alt="Logo">
     </header>
+    <div class="icons">
+        <a href="https://www.linkedin.com/in/blakewdesigns/"><div class="social1"></div></a>
+        <a href="https://www.instagram.com/blakewdesigns/"><div class="social2" ></div></a>
+    </div>
     <div class="nav">
         <div class="links">
             <a href="index.html">UX & UI</a>
             <a href="illustration.html">Illustration</a>
             <a href="about.html">About</a>
-        </div><div class="icons">
-            <a href="https://www.linkedin.com/in/blakewdesigns/"><img class="social" src="https://i.imgur.com/RzjKtpK.png" alt="linkedin"></a>
-            <a href="https://www.instagram.com/blakewdesigns/"><img class="social" src="https://i.imgur.com/tiargvZ.png" alt="instagram"></a>
         </div>
     </div>
     <div class="wrapper">
