--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
         <div class="links">
             <a href="index.html">UX & UI</a>
             <a href="illustration.html">Illustration</a>
-            <a href="about.html">About</a>
+            <a class="active" href="about.html">About</a>
         </div>
     </div>
     <div id="aboutwrapper">
@@ -34,15 +34,17 @@
                 <p>I am a creator, UX designer, and visual designer living in Indianapolis. I graduated from Kenzie Academy with certificates in UX Design and User Interface Engineering. 
                     I am married to a wonderful woman and we have two awesome cats. We enjoy adventuring, playing video games, and eating great food.
                 </p>
-                <p>I am currently available for commissions and freelance work.</p>
+                <p>I am currently searching for a full-time UX/Visual Designer position.</p>
+                <p>Thank you for checking out my work!</p>
             </div>
             <div id="btnwrapper">
-                <a id="emailbtn" href="mailto:blakewdesigns@gmail.com">Send an Email</a>
+                <a id="emailbtn" href="mailto:blakewdesigns@gmail.com">Email Me</a>
             </div>
         </div>
     </div>
     <footer>
         <h4 id="footertag">© Blake Walker 2011-2020</h4>
+        <p class="footnotes">Website designed, built, and deployed by Blake W Designs. All works displayed and contained within this site are the copyrighted property of Blake W Designs. All rights reserved.</p>
     </footer>
 </body>
 </html>
