--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
     <div class="nav">
         <div class="links">
-            <a href="index.html">UX & UI</a>
+            <a class="active" href="index.html">UX & UI</a>
             <a href="illustration.html">Illustration</a>
             <a href="about.html">About</a>
         </div>
@@ -67,6 +67,7 @@
     </div>
     <footer>
         <h4 id="footertag">© Blake Walker 2011-2020</h4>
+        <p class="footnotes">Website designed, built, and deployed by Blake W Designs. All works displayed and contained within this site are the copyrighted property of Blake W Designs. All rights reserved.</p>
     </footer>
 </body>
 </html>
