--- a/painting.html
+++ b/painting.html
@@ -14,12 +14,12 @@
     </header>
     <div class="icons">
         <a href="https://www.linkedin.com/in/blakewdesigns/"><div class="social1"></div></a>
-        <a href="https://www.instagram.com/blakewdesigns/"><div class="social2" ></div></a>
+        <a href="https://www.instagram.com/blakewdesigns/"><div class="social2"></div></a>
     </div>
     <div class="nav">
         <div class="links">
             <a href="index.html">UX & UI</a>
-            <a href="illustration.html">Illustration</a>
+            <a class="active" href="illustration.html">Illustration</a>
             <a href="about.html">About</a>
         </div>
     </div>
@@ -29,6 +29,7 @@
     </div>
     <footer>
         <h4 id="footertag">© Blake Walker 2011-2020</h4>
+        <p class="footnotes">Website designed, built, and deployed by Blake W Designs. All works displayed and contained within this site are the copyrighted property of Blake W Designs. All rights reserved.</p>
     </footer>
 </body>
 </html>
