--- a/illustration.html
+++ b/illustration.html
@@ -19,7 +19,7 @@
     <div class="nav">
         <div class="links">
             <a href="index.html">UX & UI</a>
-            <a href="illustration.html>">Illustration</a>
+            <a class="active" href="illustration.html>">Illustration</a>
             <a href="about.html">About</a>
         </div>
     </div>
@@ -51,12 +51,13 @@
                         Digital Painting
                     </div>
                 </div>
-                <img src="src/images/ODST Painting.jpg">
+                <img src="src/images/ODST_Painting.png">
             </div>
         </a>
     </div>
     <footer>
         <h4 id="footertag">© Blake Walker 2011-2020</h4>
+        <p class="footnotes">Website designed, built, and deployed by Blake W Designs. All works displayed and contained within this site are the copyrighted property of Blake W Designs. All rights reserved.</p>
     </footer>
 </body>
 </html>
