Updating Photo Hosting

--- a/portraits.html
+++ b/portraits.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="global.css">
     <title>About</title>
-    <link rel="icon" type="image/png" href="src/images/Favicon.png">
+    <link rel="icon" type="image/png" href="https://i.imgur.com/Q88SmU8.png">
 </head>
 <body>
     <header>
@@ -24,22 +24,22 @@
         </div>
     </div>
     <div class="wrapper">
-        <img class="portraitwrap" src="src/images/Blake Portrait 2019 Q3.png">
-        <img class="portraitwrap" src="src/images/Brian Portrait 2019.png">
-        <img class="portraitwrap" src="src/images/Brooklyn Blonde.png">
-        <img class="portraitwrap" src="src/images/Cody Face.png">
-        <img class="portraitwrap" src="src/images/Eli Avatar Portrait.png">
-        <img class="portraitwrap" src="src/images/Jenna Portrait.png">
-        <img class="portraitwrap" src="src/images/Joey October 2018.png">
-        <img class="portraitwrap" src="src/images/Katie Finley 10-18.png">
-        <img class="portraitwrap" src="src/images/King Brad.png">
-        <img class="portraitwrap" src="src/images/Kris Illustration.png">
-        <img class="portraitwrap" src="src/images/Matt 2019.png">
-        <img class="portraitwrap" src="src/images/Medina Illustration.png">
-        <img class="portraitwrap" src="src/images/Nigel Portrait.png">
-        <img class="portraitwrap" src="src/images/Paige 2019.png">
-        <img class="portraitwrap" src="src/images/Zach Illustration.png">
-        <img class="portraitwrap" src="src/images/Zane Portrait.png">
+        <img class="portraitwrap" src="https://i.imgur.com/No5hZkx.png">
+        <img class="portraitwrap" src="https://i.imgur.com/6aWNLr9.png">
+        <img class="portraitwrap" src="https://i.imgur.com/ccvDvx8.png">
+        <img class="portraitwrap" src="https://i.imgur.com/sJfE2Wb.png">
+        <img class="portraitwrap" src="https://i.imgur.com/aFZI3U0.png">
+        <img class="portraitwrap" src="https://i.imgur.com/2d5DwQL.png">
+        <img class="portraitwrap" src="https://i.imgur.com/GvZ8kTx.png">
+        <img class="portraitwrap" src="https://i.imgur.com/ytuzJph.png">
+        <img class="portraitwrap" src="https://i.imgur.com/FsM8MDv.png">
+        <img class="portraitwrap" src="https://i.imgur.com/vmV7psV.png">
+        <img class="portraitwrap" src="https://i.imgur.com/1kMKO3I.png">
+        <img class="portraitwrap" src="https://i.imgur.com/FF20xj9.png">
+        <img class="portraitwrap" src="https://i.imgur.com/ZuP6Qnl.png">
+        <img class="portraitwrap" src="https://i.imgur.com/FSCVDRi.png">
+        <img class="portraitwrap" src="https://i.imgur.com/8LQTfCY.png">
+        <img class="portraitwrap" src="https://i.imgur.com/FEfdDss.png">
     </div>
     <footer>
         <h4 id="footertag">© Blake Walker 2011-2020</h4>
