--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="global.css">
     <title>About</title>
-    <link rel="icon" type="image/png" href="src/images/Favicon.png">
+    <link rel="icon" type="image/png" href="https://i.imgur.com/Q88SmU8.png">
 </head>
 <body>
     <header>
@@ -25,7 +25,7 @@
     </div>
     <div id="aboutwrapper">
         <div class="leftcontainer">
-            <img src="src/images/Website Pic.jpg">
+            <img src="https://i.imgur.com/ep7onUu.jpg">
         </div>
         <div class="rightcontainer">
             <div class="containertext">
@@ -38,7 +38,7 @@
                 <p>Thank you for checking out my work!</p>
             </div>
             <div id="btnwrapper">
-                <a id="emailbtn" href="mailto:blakewdesigns@gmail.com">Email Me</a>
+                <a id="emailbtn" href="mailto:blake.wdesigns@gmail.com">Email Me</a>
             </div>
         </div>
     </div>
