--- a/framer.html
+++ b/framer.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="global.css">
     <title>About</title>
-    <link rel="icon" type="image/png" href="src/images/Favicon.png">
+    <link rel="icon" type="image/png" href="https://i.imgur.com/Q88SmU8.png">
 </head>
 <body>
     <header>
@@ -25,10 +25,10 @@
     </div>
     <h1 id="framertitle">FramerX Interaction Study</h1>
     <div id="framerwrapper">
-        <img class="framer" src="src/images/Fr1.gif">
-        <img class="framer" src="src/images/fr2.gif">
-        <img class="framer" src="src/images/fr3.gif">
-        <img class="framer" src="src/images/fr4.gif">
+        <img class="framer" src="https://i.imgur.com/sXm3rIC.gifv">
+        <img class="framer" src="https://i.imgur.com/03kwBtQ.gifv">
+        <img class="framer" src="https://i.imgur.com/PWEzaD8.gifv">
+        <img class="framer" src="https://i.imgur.com/IGOybC3.gifv">
     </div>
     <footer>
         <h4 id="footertag">© Blake Walker 2011-2020</h4>
