--- a/illustration.html
+++ b/illustration.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="global.css">
     <title>Illustration</title>
-    <link rel="icon" type="image/png" href="src/images/Favicon.png">
+    <link rel="icon" type="image/png" href="https://i.imgur.com/Q88SmU8.png">
 </head>
 <body>
     <header>
@@ -31,7 +31,7 @@
                         Portraits
                     </div>
                 </div>
-                <img src="src/images/Matt Illustration.png">
+                <img src="https://i.imgur.com/1kMKO3I.png">
             </div>
         </a>
         <a href="vector.html">
@@ -41,7 +41,7 @@
                         Illustrations
                     </div>
                 </div>
-                <img src="src/images/Indy Skate Crew.png">
+                <img src="https://i.imgur.com/ZxXKOrj.png">
             </div>
         </a>
         <a href="painting.html">
