--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="global.css">
     <title>UX & UI</title>
-    <link rel="icon" type="image/png" href="src/images/Favicon.png">
+    <link rel="icon" type="image/png" href="https://i.imgur.com/Q88SmU8.png">
 </head>
 <body>
     <header>
@@ -31,7 +31,7 @@
                         Span - Intuitive Goal Tracking
                     </div>
                 </div>
-                <img src="src/images/CaseStudyInsta.jpg">
+                <img src="https://i.imgur.com/wXXTVbK.jpg">
             </div>
         </a>
         <a href="packet.html">
@@ -41,7 +41,7 @@
                         Packet - New Social Connection
                     </div>
                 </div>
-                <img src="src/images/Packet Behance Cover.png">
+                <img src="https://i.imgur.com/aseaaFo.png">
             </div>
         </a>
         <a href="vroom.html">
@@ -51,7 +51,7 @@
                         Vroom - Truly Own Your Vehicle
                     </div>
                 </div>
-                <img src="src/images/Vroom Case Cover.png">
+                <img src="https://i.imgur.com/bliliVu.png">
             </div>
         </a>
         <a href="framer.html">
@@ -61,7 +61,7 @@
                         FramerX Interaction Study
                     </div>
                 </div>
-                <img src="src/images/FramerX Behance Cover.jpg">
+                <img src="https://i.imgur.com/oD8Yjnn.jpg">
             </div>
         </a>
     </div>
