--- a/packet.html
+++ b/packet.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="global.css">
     <title>About</title>
-    <link rel="icon" type="image/png" href="src/images/Favicon.png">
+    <link rel="icon" type="image/png" href="https://i.imgur.com/Q88SmU8.png">
 </head>
 <body>
     <header>
@@ -24,7 +24,7 @@
         </div>
     </div>
     <div class="wrapper">
-        <img id="packetcs" src="src/images/Packet.jpg">
+        <img id="packetcs" src="https://i.imgur.com/kH3Re7O.jpg">
     </div>
     <footer>
         <h4 id="footertag">© Blake Walker 2011-2020</h4>
