--- a/painting.html
+++ b/painting.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="global.css">
     <title>About</title>
-    <link rel="icon" type="image/png" href="src/images/Favicon.png">
+    <link rel="icon" type="image/png" href="https://i.imgur.com/Q88SmU8.png">
 </head>
 <body>
     <header>
@@ -24,8 +24,8 @@
         </div>
     </div>
     <div class="wrapper">
-        <img class="paintingwrap" src="src/images/ODST Painting.jpg">
-        <img class="paintingwrap" src="src/images/Lancaster Painting.png">
+        <img class="paintingwrap" src="https://i.imgur.com/AKOWEal.png">
+        <img class="paintingwrap" src="https://i.imgur.com/JkzxBwv.jpg">
     </div>
     <footer>
         <h4 id="footertag">© Blake Walker 2011-2020</h4>
