--- a/vector.html
+++ b/vector.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="global.css">
     <title>About</title>
-    <link rel="icon" type="image/png" href="src/images/Favicon.png">
+    <link rel="icon" type="image/png" href="https://i.imgur.com/Q88SmU8.png">
 </head>
 <body>
     <header>
