Final Photo Changes

--- a/span.html
+++ b/span.html
@@ -24,7 +24,7 @@
         </div>
     </div>
     <div class="wrapper">
-        <img id="spancs" src="src/images/Span.png">
+        <img id="spancs" src="https://i.imgur.com/iZ526zb.png">
     </div>
     <footer>
         <h4 id="footertag">© Blake Walker 2011-2020</h4>
