--- a/vector.html
+++ b/vector.html
@@ -24,9 +24,9 @@
         </div>
     </div>
     <div class="wrapper">
-        <img class="vectorwrap" src="src/images/Indy Skate Crew.png">
-        <img class="vectorwrap" src="src/images/Back Burner.png">
-        <img class="vectorwrap" src="src/images/BF Final-01.jpg">
+        <img class="vectorwrap" src="https://i.imgur.com/ZxXKOrj.png">
+        <img class="vectorwrap" src="https://i.imgur.com/Fu44hgN.png">
+        <img class="vectorwrap" src="https://i.imgur.com/ZR3EoDj.jpg">
     </div>
     <footer>
         <h4 id="footertag">© Blake Walker 2011-2020</h4>
