--- a/vector.html
+++ b/vector.html
@@ -25,8 +25,8 @@
     </div>
     <div class="wrapper">
         <img class="vectorwrap" src="https://i.imgur.com/ZxXKOrj.png">
-        <img class="vectorwrap" src="https://i.imgur.com/Fu44hgN.png">
         <img class="vectorwrap" src="https://i.imgur.com/ZR3EoDj.jpg">
+        <img class="vectorwrap" src="https://i.imgur.com/Sesd8ql.png">
     </div>
     <footer>
         <h4 id="footertag">© Blake Walker 2011-2020</h4>
