--- a/painting.html
+++ b/painting.html
@@ -15,6 +15,7 @@
     <div class="icons">
         <a href="https://www.linkedin.com/in/blakewdesigns/"><div class="social1"></div></a>
         <a href="https://www.instagram.com/blakewdesigns/"><div class="social2"></div></a>
+        <a href="https://drive.google.com/open?id=1c4uI3UVEgLYGtjae_Wid-5qJosyRioET"><div class="social3" ></div></a>
     </div>
     <div class="nav">
         <div class="links">
