--- a/about.html
+++ b/about.html
@@ -13,9 +13,15 @@
         <img class="logo" src="https://i.imgur.com/CW7VmMm.png" alt="Blake W Designs Logo">
     </header>
     <div class="icons">
-        <a href="https://www.linkedin.com/in/blakewdesigns/"><div class="social1"></div></a>
-        <a href="https://www.instagram.com/blakewdesigns/"><div class="social2" ></div></a>
-        <a href="https://drive.google.com/open?id=1c4uI3UVEgLYGtjae_Wid-5qJosyRioET"><div class="social3" ></div></a>
+        <div class="iconwrapper">
+            <a href="https://www.linkedin.com/in/blakewdesigns/"><div class="social1"></div></a>
+        </div>
+        <div class="iconwrapper">
+            <a href="https://www.instagram.com/blakewdesigns/"><div class="social2" ></div></a>
+        </div>
+        <div class="iconwrapper">
+            <a href="https://drive.google.com/open?id=1c4uI3UVEgLYGtjae_Wid-5qJosyRioET"><div class="social3" ></div></a>
+        </div>
     </div>
     <div class="nav">
         <div class="links">
