--- a/painting.html
+++ b/painting.html
@@ -13,8 +13,11 @@
         <img class="logo" src="https://i.imgur.com/CW7VmMm.png" alt="Logo">
     </header>
     <div class="icons">
+        <div class="dividerleft"></div>
         <a href="https://www.linkedin.com/in/blakewdesigns/"><div class="social1"></div></a>
+        <div class="divider"></div>
         <a href="https://www.instagram.com/blakewdesigns/"><div class="social2"></div></a>
+        <div class="divider"></div>
         <a href="https://drive.google.com/open?id=1c4uI3UVEgLYGtjae_Wid-5qJosyRioET"><div class="social3" ></div></a>
     </div>
     <div class="nav">
