--- a/framer.html
+++ b/framer.html
@@ -29,10 +29,10 @@
     </div>
     <h1 id="framertitle">FramerX Interaction Study</h1>
     <div id="framerwrapper">
-        <img class="framer" src="https://i.imgur.com/sXm3rIC.gifv">
-        <img class="framer" src="https://i.imgur.com/03kwBtQ.gifv">
-        <img class="framer" src="https://i.imgur.com/PWEzaD8.gifv">
-        <img class="framer" src="https://i.imgur.com/IGOybC3.gifv">
+        <img class="framer" src="src/images/Fr1.gif">
+        <img class="framer" src="src/images/fr2.gif">
+        <img class="framer" src="src/images/fr3.gif">
+        <img class="framer" src="src/images/fr4.gif">
     </div>
     <footer>
         <h4 id="footertag">© Blake Walker 2011-2020</h4>
