--- a/index.html
+++ b/index.html
@@ -10,16 +10,19 @@
 </head>
 <body>
     <header>
-        <img class="logo" src="https://i.imgur.com/CW7VmMm.png" alt="Logo">
+        <div class="topdivider">
+            <div class="icons">
+                <div class="dividerleft"></div>
+                <a href="https://www.linkedin.com/in/blakewdesigns/"><div class="social1"></div></a>
+                <div class="divider"></div>
+                <a href="https://www.instagram.com/blakewdesigns/"><div class="social2" ></div></a>
+                <div class="divider"></div>
+                <a href="https://drive.google.com/open?id=1c4uI3UVEgLYGtjae_Wid-5qJosyRioET"><div class="social3" ></div></a>
+            </div>
+        </div>
+        <img class="logo" src="src/images/transparentlogo.png" alt="Logo">
     </header>
-    <div class="icons">
-        <div class="dividerleft"></div>
-        <a href="https://www.linkedin.com/in/blakewdesigns/"><div class="social1"></div></a>
-        <div class="divider"></div>
-        <a href="https://www.instagram.com/blakewdesigns/"><div class="social2" ></div></a>
-        <div class="divider"></div>
-        <a href="https://drive.google.com/open?id=1c4uI3UVEgLYGtjae_Wid-5qJosyRioET"><div class="social3" ></div></a>
-    </div>
+    
     <div class="nav">
         <div class="links">
             <a class="active" href="index.html">UX & UI</a>
