--- a/span.html
+++ b/span.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <img class="logo" src="https://i.imgur.com/CW7VmMm.png" alt="Logo">
+        <img class="logo" src="https://i.imgur.com/spEMgvM.png" alt="Logo">
     </header>
     <div class="icons">
         <div class="dividerleft"></div>
