--- a/portraits.html
+++ b/portraits.html
@@ -23,7 +23,7 @@
     <div class="nav">
         <div class="links">
             <a href="index.html">UX & UI</a>
-            <a class="active" href="illustration.html">Illustration</a>
+            <a class="active" href="illustration.html">Back to Illustration</a>
             <a href="about.html">About</a>
         </div>
     </div>
