Added JS and back to top button

--- a/framer.html
+++ b/framer.html
@@ -34,9 +34,11 @@
         <img class="framer" src="src/images/fr3.gif">
         <img class="framer" src="src/images/fr4.gif">
     </div>
+    <button onClick="topFunction()" id="topBtn"><img id="pagebtn" src="/src/images/Top of Page Button.png"></button>
     <footer>
         <h4 id="footertag">© Blake Walker 2011-2020</h4>
         <p class="footnotes">Website designed, built, and deployed by Blake W Designs. All works displayed and contained within this site are the copyrighted property of Blake W Designs. All rights reserved.</p>
     </footer>
+    <script src="scripts/main.js"></script>
 </body>
 </html>
