--- a/span.html
+++ b/span.html
@@ -30,9 +30,11 @@
     <div class="wrapper">
         <img id="spancs" src="https://i.imgur.com/iZ526zb.png">
     </div>
+    <button onClick="topFunction()" id="topBtn"><img id="pagebtn" src="/src/images/Top of Page Button.png"></button>
     <footer>
         <h4 id="footertag">© Blake Walker 2011-2020</h4>
         <p class="footnotes">Website designed, built, and deployed by Blake W Designs. All works displayed and contained within this site are the copyrighted property of Blake W Designs. All rights reserved.</p>
     </footer>
+    <script src="scripts/main.js"></script>
 </body>
 </html>
