--- a/vector.html
+++ b/vector.html
@@ -32,9 +32,11 @@
         <img class="vectorwrap" src="https://i.imgur.com/ZR3EoDj.jpg">
         <img class="vectorwrap" src="https://i.imgur.com/Sesd8ql.png">
     </div>
+    <button onClick="topFunction()" id="topBtn"><img id="pagebtn" src="/src/images/Top of Page Button.png"></button>
     <footer>
         <h4 id="footertag">© Blake Walker 2011-2020</h4>
         <p class="footnotes">Website designed, built, and deployed by Blake W Designs. All works displayed and contained within this site are the copyrighted property of Blake W Designs. All rights reserved.</p>
     </footer>
+    <script src="scripts/main.js"></script>
 </body>
 </html>
