Single Page Test

--- a/index.html
+++ b/index.html
@@ -69,6 +69,13 @@
             </div>
         </a>
     </div>
+    <div class="testframe">
+        <div class="testcontainer">
+            <h1>App Title</h1>
+            <p>Brief description</p>
+            <a href="#">View Case Study</a>
+        </div>
+    </div>
     <footer>
         <h4 id="footertag">© Blake Walker 2011-2020</h4>
         <p class="footnotes">Website designed, built, and deployed by Blake W Designs. All works displayed and contained within this site are the copyrighted property of Blake W Designs. All rights reserved.</p>
