--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
                 <p>I am a creator, UX designer, and visual designer living in Indianapolis. I graduated from Kenzie Academy with certificates in UX Design and User Interface Engineering. 
                     I am married to a wonderful woman and we have two awesome cats. We enjoy adventuring, playing video games, and eating great food.
                 </p>
-                <p>I am currently searching for a full-time UX/Visual Designer position.</p>
+                <p>I am currently employed full-time but am accepting part-time commissions.</p>
                 <p>Thank you for checking out my work!</p>
             </div>
             <div id="btnwrapper">
