Update with Twitch commissions

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <div class="links">
             <a class="active" href="index.html">UX & UI</a>
             <a href="illustration.html">Illustration</a>
+            <a href="twitch.html">Twitch</a>
             <a href="about.html">About</a>
         </div>
     </div>
