--- a/twitch.html
+++ b/twitch.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="global.css">
-    <title>About</title>
+    <title>Twitch</title>
     <link rel="icon" type="image/png" href="https://i.imgur.com/Q88SmU8.png">
 </head>
 <body>
     <header>
-        <img class="logo" src="https://i.imgur.com/spEMgvM.png" alt="Blake W Designs Logo">
+        <img class="logo" src="https://i.imgur.com/spEMgvM.png" alt="Logo">
     </header>
     <div class="icons">
         <div class="dividerleft"></div>
@@ -22,34 +22,39 @@
     </div>
     <div class="nav">
         <div class="links">
-            <a href="index.html">UX & UI</a>
+            <a class="active" href="index.html">Back to UX</a>
             <a href="illustration.html">Illustration</a>
             <a href="twitch.html">Twitch</a>
-            <a class="active" href="about.html">About</a>
+            <a href="about.html">About</a>
         </div>
     </div>
-    <div id="aboutwrapper">
-        <div class="leftcontainer">
-            <img src="https://i.imgur.com/ep7onUu.jpg">
-        </div>
-        <div class="rightcontainer">
-            <div class="containertext">
-                <h2>Blake Walker</h2>
-                <h3>UX/UI Designer & Visual Designer</h3>
-                <p>I am a creator, UX designer, and visual designer living in Indianapolis. I graduated from Kenzie Academy with certificates in UX Design and User Interface Engineering. 
-                    I am married to a wonderful woman and we have two awesome cats. We enjoy adventuring, playing video games, and eating great food.
-                </p>
-                <p>I am currently employed full-time but accepting part-time commissions.</p>
-                <p>Thank you for checking out my work!</p>
+    <div class="wrapper">
+        <a href="#">
+            <div class="project">
+                <div class="overlay">
+                    <div class="title">
+                        Stream Overlay Commissions
+                    </div>
+                </div>
+                <img src="/src/images/under_construction.png">
             </div>
-            <div id="btnwrapper">
-                <a id="emailbtn" href="mailto:blake.wdesigns@gmail.com">Email Me</a>
+        </a>
+        <a href="emojis.html">
+            <div class="project">
+                <div class="overlay">
+                    <div class="title">
+                        Emote Pack Commissions
+                    </div>
+                </div>
+                <img src="/src/images/emojis_cover.png">
             </div>
-        </div>
+        </a>
     </div>
+    <button onClick="topFunction()" id="topBtn"><img id="pagebtn" src="/src/images/Top of Page Button.png"></button>
     <footer>
         <h4 id="footertag">© Blake Walker 2011-2020</h4>
         <p class="footnotes">Website designed, built, and deployed by Blake W Designs. All works displayed and contained within this site are the copyrighted property of Blake W Designs. All rights reserved.</p>
     </footer>
+    <script src="scripts/main.js"></script>
 </body>
 </html>
