--- a/vector.html
+++ b/vector.html
@@ -24,6 +24,7 @@
         <div class="links">
             <a href="index.html">UX & UI</a>
             <a class="active" href="illustration.html">Back to Illustration</a>
+            <a href="twitch.html">Twitch</a>
             <a href="about.html">About</a>
         </div>
     </div>
