--- a/emojis.html
+++ b/emojis.html
@@ -24,7 +24,7 @@
         <div class="links">
             <a href="index.html">UX</a>
             <a href="illustration.html">Illustration</a>
-            <a class="active" href="twitch.html">Return to Twitch</a>
+            <a class="active" href="twitch.html">Back to Twitch</a>
             <a href="about.html">About</a>
         </div>
     </div>
