Another nav tweak

--- a/twitch.html
+++ b/twitch.html
@@ -22,9 +22,9 @@
     </div>
     <div class="nav">
         <div class="links">
-            <a class="active" href="index.html">Back to UX</a>
+            <a href="index.html">UX & UI</a>
             <a href="illustration.html">Illustration</a>
-            <a href="twitch.html">Twitch</a>
+            <a class="active" href="twitch.html">Twitch</a>
             <a href="about.html">About</a>
         </div>
     </div>
