--- a/span.html
+++ b/span.html
@@ -29,7 +29,7 @@
         </div>
     </div>
     <div class="wrapper">
-        <img id="spancs" src="https://i.imgur.com/iZ526zb.png">
+        <img id="spancs" src="/src/images/span2x.png">
     </div>
     <button onClick="topFunction()" id="topBtn"><img id="pagebtn" src="/src/images/Top of Page Button.png"></button>
     <footer>
